--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,50 @@ body {
   text-align: center;
 }
 
+.header-container {
+  padding: 20px;
+}
+
+.float-child-lhs,
+.float-child-rhs {
+  width: 50%;
+  float: left;
+}
+
+.float-child-lhs {
+  text-align: right;
+}
+
+.float-child-rhs {
+  text-align: left;
+}
+
+#image-container {
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  height: 0px;
+}
+
+#image-container-width {
+  width: 920px;
+  margin: auto auto;
+  position: relative;
+}
+
+#image {
+  width: 260px;
+  height: 260px;
+  border-radius: 260px;
+  position: absolute;
+  top: 5px;
+  right: -50px;
+  background-size: 100%;
+  background-color: #ddd;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
 h1,
 h2,
 .header {
