--- a/css/styles.css
+++ b/css/styles.css
@@ -30,21 +30,32 @@ body {
 }
 
 #image-container-width {
-  width: 920px;
+  width: 490px;
   margin: auto auto;
   position: relative;
 }
 
 #image {
-  width: 260px;
-  height: 260px;
-  border-radius: 260px;
+  width: 120px;
+  height: 120px;
+  border-radius: 120px;
   position: absolute;
-  top: 5px;
-  right: -50px;
+  top: 25px;
+  right: 0px;
   background-size: 100%;
   background-color: #ddd;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+#image:hover {
+  box-shadow: 0 0 15px red;
+  cursor: pointer;
+}
+
+.funklet-machine {
+  border: none;
+  width: 100%;
+  height: 275px;
 }
 
 h1,
@@ -63,9 +74,7 @@ h1 {
   font-size: 45px;
 }
 
-iframe {
-  margin-top: 20px;
-  height: 250px;
+.select-container {
   width: 100%;
 }
 
