--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ body {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
+a:focus #image,
 #image:hover {
   box-shadow: 0 0 15px rgba(255, 0, 0, 0.7);
   cursor: pointer;
