--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,13 @@ select {
 
 h1 {
   font-size: 45px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+h2 {
+  font-size: 28px;
+  margin-block-start: 0;
 }
 
 .select-container {
